Added head entry for favicon

--- a/olad/www/ola.html
+++ b/olad/www/ola.html
@@ -6,6 +6,8 @@
     <link rel='stylesheet' href='toolbar.css'>
     <script src='ola.js'></script>
     <title>OLA Admin</title>
+    <link rel="icon" href="logo.png" type="image/x-icon"/>
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon"/>
     <style type='text/css'>
       body {
         margin: 0px;
